# minidlna

./: .gitignore  CMakeLists.txt  Makefile.am  albumart.c  captions.c  captions.h  image_utils.c  libav.cmake  metadata.c  metadata.h  metadata_ext.c  metadata_ext.h  minidlna.c  minidlna.conf  minidlnatypes.h  notify_event.c  notify_event.h  options.c  options.h  scanner.c  scanner.h  scanner_sqlite.h  upnpglobalvars.c  upnpglobalvars.h  upnpreplyparse.c  upnpreplyparse.h  upnpsoap.c  utils.c  utils.h
cmake-modules/: FindExif.cmake  FindFLAC.cmake  FindID3Tag.cmake  FindJansson.cmake  FindLibAVFormat.cmake  FindLibAVUtil.cmake  FindLibAvCodec.cmake  FindLibSWResample.cmake  FindOgg.cmake  FindVorbis.cmake
